Remove obsolete code (#2699)